--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtkqCcnn_hs_view.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtkqCcnn_hs_view.cshtml
@@ -1,35 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "TheoDoiNopHoSoDetailPt3";
+    ViewBag.Title = "Theo dõi hồ sơ";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
+
 <style>
-    .colorlogin {
-        color: #ff6a00 !important;
-    }
-
-    .login-button {
-        padding: 7px 10px;
-        border-radius: 3px !important;
-        background-color: #ff6a00;
-        border: none;
-        color: #fff;
-        font-size: 15px;
-    }
-
-        .login-button:hover {
-            background-color: #808080;
-            color: #fff;
-        }
-
-
-    .label_tieude {
-        white-space: nowrap !important;
-    }
-
-    .span_with_for {
-        width: 65px !important
-    }
 
     .btn, .form-select, .form-control {
         border-radius: 3px;
@@ -64,12 +39,12 @@
         <div class="page-header-content">
             <div class="row align-items-center justify-content-between pt-3">
                 <div class="col-auto mb-1">
-                    <div class="page-header-title  mb-2">
+                    <div class="page-header-title mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
-                        <span id="sp_tieude">Đăng ký tuyển thẳng theo quy định của trường (áp dụng cho học sinh đạt giải các môn học từ giải Ba trở lên)</span>
+                        <span id="sp_tieude">Đăng ký xét tuyển sử dụng kết quả thi chứng chỉ ngoại ngữ</span>
+
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
@@ -79,20 +54,18 @@
         let sp_tieude = document.getElementById('sp_tieude');
         function reportWindowSize() {
             if (window.innerWidth <= 1200) {
-                sp_tieude.innerText = "Đăng ký tuyển thẳng (HS có giải trở lên)";
+                sp_tieude.innerHTML = "ĐKXT SD Kết quả DGNL hoặc CCNN";
             }
             else {
-                sp_tieude.innerText = "Đăng ký tuyển thẳng theo quy định của trường (áp dụng cho học sinh giỏi đạt giải  các môn học từ giải Ba trở lên)";
+                sp_tieude.innerHTML = "Đăng ký xét tuyển sử dụng kết quả thi đánh giá tư duy/ năng lực";
             }
         }
         window.onresize = reportWindowSize;
-    });
-
+    })
     $(document).ready(function () {
-        /*  var hidden_Dkxt_HB_ID = $('#hidden_Dkxt_HB_ID').val();*/
         let data_get = { Dkxt_ID: $('#hidden_Dkxt_ID').val() }
         $.ajax({
-            url: '/Admin/TongHopSoLieuDKXTs/DangKyXetTuyen_TT_GetByID',
+            url: '/Admin/TongHopSoLieuDKXTs/DangKyXetTuyen_DanhGia_GetByID',
             data: JSON.stringify(data_get),
             type: 'POST',
             contentType: 'application/json;charset=utf-8',
@@ -111,26 +84,31 @@
                     $('#GioiTinh').text(data.ThiSinh_GioiTinh); //$('#ThiSinh_GioiTinh').val(data.ThiSinh_GioiTinh);
                     $('#DanToc').text(data.ThiSinh_DanToc); //    $('#ThiSinh_DanToc').val(data.ThiSinh_DanToc);
 
-                    $('#NguyenVong').text(data.ThiSinh_NguyenVong);
-                    $('#Nganh').text(data.ThiSinh_Nganh);
-                    $('#NamDatGiai').text(data.Dkxt_NamDatGiai);
-                    $('#MonDatGiai').text(data.Dkxt_MonDatGiai);
-                    $('#LoaiGiai').text(data.Dkxt_LoaiGiai);
+                    $('#NguyenVong').text(data.Dkxt_NguyenVong);
+                    $('#Nganh').text(data.Nganh_TenNganh);
+                    $('#TenChungChi').text(data.Dkxt_ChungChi_Ten);
+                    $('#DonViToChuc').text(data.Dkxt_DonViToChuc);
+                    $('#ThoiGianThi').text(data.Dkxt_NgayDuThi);
+                    $('#DiemThi').text(data.Dkxt_KetQuaDatDuoc + '/' + data.Dkxt_TongDiem + ' (Tổng điểm)');
 
+                    // = model.Dkxt_MinhChung_KetQua,
+                    //     = model.Dkxt_MinhChung_HB,
+                    //    Dkxt_MinhChung_CCCD = model.Dkxt_MinhChung_CCCD,
+                    //    Dkxt_MinhChung_Bang = model.Dkxt_MinhChung_Bang,
+                    //    Dkxt_MinhChung_UuTien = model.Dkxt_MinhChung_UuTien,
 
-                    if (data.Dkxt_MinhChung_Giai) {
-                        const ArrCnGiai = data.Dkxt_MinhChung_Giai.split("#");
-                        if (ArrCnGiai.length > 0) {
-                            $('#div_mc_ketqua_giai').append('- Chứng nhận đạt giải: ');
-                            for (i = 0; i < ArrCnGiai.length; i++) {
-
-                                if (ArrCnGiai[i].length > 0) {
-                                    var str_a = ` <a href="#$" class="link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" onclick="showimg('${ArrCnGiai[i]}',1,${data.Dkxt_ID} )">Tệp ${i + 1}</a> `;
-                                    $('#div_mc_ketqua_giai').append(str_a);
+                    if (data.Dkxt_MinhChung_KetQua) {
+                        const ArrKetQuaThi = data.Dkxt_MinhChung_KetQua.split("#");
+                        if (ArrKetQuaThi.length > 0) {
+                            $('#div_mc_chungchi').append('- Chứng nhận kết quả thi ngoại ngữ: ');
+                            for (i = 0; i < ArrKetQuaThi.length; i++) {
+                                if (ArrKetQuaThi[i].length > 0) {
+                                    var str_a = ` <a href="#$" class="link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" onclick="showimg('${ArrKetQuaThi[i]}',1,${data.Dkxt_ID} )">Tệp ${i + 1}</a> `;
+                                    $('#div_mc_chungchi').append(str_a);
 
                                     if (i == 0) {
-                                        $('#img_txt_card_hearder').text('Hình ảnh minh chứng chứng nhận tốt nghiệp');
-                                        var url = ArrCnGiai[i];
+                                        $('#img_txt_card_hearder').text('Hình ảnh minh chứng kết quả thi đánh giá năng lực');
+                                        var url = ArrKetQuaThi[i];
                                         var lastChar = url.substr(url.length - 4); // => kiểm tra file pdf hoặc img
 
                                         if (lastChar.toLowerCase() != ".pdf") {
@@ -153,11 +131,11 @@
                                     }
                                 }
                             }
-                            $('#div_mc_ketqua_giai').show();
+                            $('#div_mc_chungchi').show();
                         }
                         else {
 
-                            $('#div_mc_ketqua_giai').hide();
+                            $('#div_mc_chungchi').hide();
                         }
                     }
                     else {
@@ -305,7 +283,7 @@
                         $('#ThongBao_TrangThaiKinhPhi').append(`<span>Trạng thái nộp kinh phí: Chưa có tệp minh chứng</span>`);
                     }
                     else {
-                        $('#hidden_TrangThai_KinhPhi').val(data.Dkxt_TrangThai_KinhPhi);                        
+                        $('#hidden_TrangThai_KinhPhi').val(data.Dkxt_TrangThai_KinhPhi);
                         if (data.Dkxt_TrangThai_KinhPhi == 1) {
                             $('#ThongBao_TrangThaiKinhPhi').empty();
                             $('#ThongBao_TrangThaiKinhPhi').append(`<span>Trạng thái nộp kinh phí: Đã nộp minh chứng, Chưa kiểm tra</span>`);
@@ -339,7 +317,7 @@
                             $('#radioThongtinLePhiSai').removeAttr('checked', 'checked');
                         }
                     }
-                   
+
                 }
 
             },
@@ -348,7 +326,6 @@
             }
         });
     });
-
 </script>
 <div class="container-fluid px-12">
     <div class="row g-1">
@@ -378,16 +355,17 @@
                             <hr class="mb-0 mt-0" />
                             <p class="mt-0 mb-0">- Nguyện vọng: <b id="NguyenVong"></b></p>
                             <p class="mt-0 mb-0">- Ngành: <b id="Nganh"> </b></p>
-                            <p class="mt-0 mb-0">- Năm đạt giải: <b id="NamDatGiai"> </b></p>
-                            <p class="mt-0 mb-0">- Môn đạt giải: <b id="MonDatGiai"> </b></p>
-                            <p class="mt-0 mb-0">- Loại giải: <b id="LoaiGiai"> </b></p>
+                            <p class="mt-0 mb-0">- Tên chứng chỉ: <b id="TenChungChi"> </b></p>
+                            <p class="mt-0 mb-0">- Đơn vị tổ chức: <b id="DonViToChuc"> </b></p>
+                            <p class="mt-0 mb-0">- Thời gian dự thi: <b id="ThoiGianThi"> </b></p>
+                            <p class="mt-0 mb-0">- Điểm đạt được: <b id="DiemThi"> </b></p>
 
                             <p class="mt-0 mb-0" style="display:none">- Năm tốt nghiệp: <b id="NamTotNghiep"> </b></p>
                         </div>
                         <div class="col-lg-6 col-md-12 mb-3">
                             <b>Hình ảnh minh chứng</b>
                             <hr class="mb-0 mt-0" />
-                            <p class="mt-0 mb-0" id="div_mc_ketqua_giai"></p>
+                            <p class="mt-0 mb-0" id="div_mc_chungchi"></p>
                             <p class="mt-0 mb-0" id="div_mc_hocba"></p>
                             <p class="mt-0 mb-0" id="div_mc_bangtotnghiep"></p>
                             <p class="mt-0 mb-0" id="div_mc_cccd"></p>
@@ -490,6 +468,7 @@
                                                     $('#Error_Rgt_KiemDuyet_KinhPhi').text('Chọn kiểm duyệt lệ phí');
                                                     flag = false;
                                                 }
+
                                                 if ($('#radioThongtinLePhiSai').is(':checked')) {
                                                     _dkxt_TrangThai_KinhPhi = 2;
                                                 }
@@ -503,7 +482,7 @@
 
                                             var data_update = {
                                                 Dkxt_ID: $('#hidden_Dkxt_ID').val(),
-                                                Dkxt_TrangThai_KinhPhi: _dkxt_TrangThai_KinhPhi,                                               
+                                                Dkxt_TrangThai_KinhPhi: _dkxt_TrangThai_KinhPhi,
                                                 Dkxt_TrangThai_HoSo: _dkxt_TrangThai_HoSo,
                                                 Dkxt_ThongBaoKiemDuyet_HoSo: $('#Dkxt_ThongBaoKiemDuyet_HoSo').val(),
                                             }
@@ -513,7 +492,7 @@
                                             //return;
 
                                             $.ajax({
-                                                url: "/Admin/DangKyXetTuyens/Dkxt_TuyenThang_Update_KiemDuyet",
+                                                url: "/Admin/DangKyXetTuyens/Dkxt_DGNL_NN_Update_KiemDuyet",
                                                 type: "POST",
                                                 data: JSON.stringify(data_update),
                                                 contentType: 'application/json;charset=utf-8',
@@ -528,19 +507,19 @@
                                             });
                                         });
 
-                                      
+
                                     });
 
                                     $(document).ready(function () {
                                         $('#radioHoSoDayDu').click(function () {
                                             $('#Error_Rgt_KiemDuyetHoSo').text('');
                                         });
-
-                                        $('#radioDung').click(function () {
+                                      
+                                        $('#radioThongtinLePhiDung').click(function () {
                                             $('#Error_Rgt_KiemDuyetKinhPhi').text('');
                                         });
 
-                                        $('#radioSai').click(function () {
+                                        $('#radioThongtinLePhiSai').click(function () {
                                             $('#Error_Rgt_KiemDuyetKinhPhi').text('');
                                         });
 
@@ -552,7 +531,7 @@
                                         var errorContainer = input.next('.text-danger');
                                         errorContainer.text('');
                                     }
-                                   
+
                                 </script>
                                 <input class="btn btn-outline-secondary" type="button" value="Quay lại" onclick="ReturnTheoDoiNopHoSo()" />
                             </div>
@@ -590,8 +569,8 @@
         </div>
     </div>
     <script>
-       
-       
+
+
     </script>
 </div>
 <input type="hidden" value="@ViewBag.Dkxt_ID" id="hidden_Dkxt_ID" />
@@ -617,16 +596,15 @@
                             Dkxt_LoaiMC: $('#hiden_loai_minhchung_xoa').val(),
                             Dkxt_Url: $("#hiden_duongdan_file_xoa").val(),
                         }
-                        //console.log("test delete", data_post)
-                        //return;
+                        s
 
                         $.ajax({
-                            url: '/Admin/DangKyXetTuyens/DkxtTt_hs_DeleteMC',
+                            url: '/Admin/DangKyXetTuyens/DkxtkqCcnn_hs_DeleteMC',
                             type: "POST",
                             data: JSON.stringify(data_post),
                             contentType: "application/json;charset=utf-8",
                             success: function (res) {
-                                window.location.href = "/Admin/DangKyXetTuyens/DkxtTt_hs_view" + str_query;
+                                window.location.href = "/Admin/DangKyXetTuyens/DkxtkqCcnn_hs_view" + str_query;
                             },
                             error: function (error) {
                                 console.error('Error update mc:', error);
@@ -645,83 +623,82 @@
     </div>
 </div>
 
+
 <script>
 
     function ReturnTheoDoiNopHoSo() {
         var str_query_current = window.location.search;
-        var str_dkxt_id = '?Dkxt_ID=' + $('#hidden_Dkxt_ID').val();
+        var str_dkxt_id = '?Dkxt_ID=' + $('#hidden_Dkxt_ID').val() + '&Ptxt_ID=' + $('#hidden_Ptxt_ID').val();
         var str_query = str_query_current.slice(0, str_query_current.length - str_dkxt_id.length);
-        window.location.href = '/Admin/DangKyXetTuyens/DkxtTt/' + str_query;
-
+        window.location.href = '/Admin/DangKyXetTuyens/DkxtkqCcnn' + str_query;
     }
 
     function showimg(url, loaimc, id_key_hs) {
 
-        console.log("url", url, "loaimc", loaimc)
-
         $('#hiden_id_key').val(id_key_hs);
-        $('#hiden_loai_minhchung_xoa').val(loaimc);
         $("#hiden_duongdan_file_xoa").val(url);
+        $('#hiden_loai_minhchung_xoa').val(loaimc);
 
-        $('#pdf_view').css('display','none');       
+        var pdf_view = document.getElementById("pdf_view");
+
         $('#pdf_view').height('0px');
-
-        //var pdf_view = document.getElementById("pdf_view");
-        //pdf_view.style.display = "none";
-        //pdf_view.style.height = "0px";
+        $('#pdf_view').hide();
+        $('#pdf_view').css('display', 'none');
 
         $('#img_view').hide();
         $("#img_view").attr("src", "");
 
         if (loaimc == 1) {
-            $('#img_txt_card_hearder').text('Hình ảnh minh chứng học bạ');
+            $('#img_txt_card_hearder').text('Minh chứng kết quả thi đánh giá năng lực');
         }
         if (loaimc == 2) {
-            $('#img_txt_card_hearder').text('Minh chứng bằng tốt nghiệp');
+            $('#img_txt_card_hearder').text('Minh chứng học bạ');
         }
         if (loaimc == 3) {
-            $('#img_txt_card_hearder').text('Minh chứng CMND');
+            $('#img_txt_card_hearder').text('Minh chứng bằng tốt nghiệp');
         }
         if (loaimc == 4) {
+            $('#img_txt_card_hearder').text('Minh chứng căn cước công dân');
+        }
+        if (loaimc == 5) {
             $('#img_txt_card_hearder').text('Giấy tờ khác');
         }
+        if (loaimc == 6) {
+            $('#img_txt_card_hearder').text('Minh chứng nộp lệ phú');
+        }
+
         var lastChar = url.substr(url.length - 4); // => kiểm tra file pdf hoặc img
 
         if (lastChar.toLowerCase() != ".pdf") {
-            $('#pdf_view').css('display', 'none');
-            $('#pdf_view').height('0px');
 
-            //pdf_view.style.display = "none";
-            //pdf_view.style.height = "0px";
+            $('#pdf_view').height('0px');
+            $('#pdf_view').hide();
+            $('#pdf_view').css('display', 'none');
 
             $("#img_view").attr("src", url);
             $("#img_view").show();
         }
         if (lastChar.toLowerCase() === ".pdf") {
             $("#img_view").hide();
-
-            $('#pdf_view').css('display','inline');
-            $('#pdf_view').height('700px');
-
-            //pdf_view.style.display = "inline";
-            //pdf_view.style.height = "700px";
-
-            $('#pdf_view').attr("src", url);
-            $('#pdf_view').show();
+            $('#pdf_view').height('500px');          
+            $('#pdf_view').css('display', 'inline');         
+            $("#pdf_view").attr("src", url);
+            $("#pdf_view").show();
         }
         $('#div_view_img').show();
     }
-</script>
-<script>
     $(document).ready(function () {
         $('#bt_close_div_view_img').click(function () {
-            $('#pdf_view').height('0');
-            $('#pdf_view').hide();
+
+            $("#img_view").attr("src", "");
             $("#pdf_view").attr("src", "");
 
+            $('#pdf_view').height('0px');
+            $('#pdf_view').hide();
+            $('#pdf_view').css('display', 'none');
+            $('#div_view_img').hide();
+
             $('#img_txt_card_hearder').text('Hình ảnh minh chứng');
-            $("#img_view").attr("src", "/Content/images/no-image.png");
-            $('#div_view_img').show();
         });
     });
 </script>
