--- a/Areas/Admin/Views/TongHopSoLieuDKXTs/TheoDoiNopHoSo.cshtml
+++ b/Areas/Admin/Views/TongHopSoLieuDKXTs/TheoDoiNopHoSo.cshtml
@@ -251,23 +251,23 @@
                                                     @{
                                                         if (item.TrangThaiLP == "0")
                                                         {
-                                                            <span style="color: red">Chưa nộp LP</span>
+                                                            <span style="color: red">Chưa nộp minh chứng</span>
                                                         }
                                                         if (item.TrangThaiLP == "1")
                                                         {
-                                                            <span style="color: red">Đã nộp, chưa KT</span>
+                                                            <span style="color: red">Đã nộp, chưa kiểm tra</span>
                                                         }
                                                         if (item.TrangThaiLP == "2")
                                                         {
-                                                            <span style="color:blue" >Đã KT, Có sai sót</span>
+                                                            <span style="color:blue">Đã kiểm tra, Có sai sót</span>
                                                         }
                                                         if (item.TrangThaiLP == "3")
                                                         {
-                                                            <span style="color:red">Đã sửa, chưa KT</span>
+                                                            <span style="color:red">Đã sửa, chưa kiểm tra</span>
                                                         }
                                                         if (item.TrangThaiLP == "9")
                                                         {
-                                                            <span>Đã KT, Đúng</span>
+                                                            <span>Đã kiểm tra, Đúng</span>
                                                         }
                                                     }
 
@@ -276,19 +276,19 @@
                                                     @{
                                                         if (item.TrangThai_HoSo == "0")
                                                         {
-                                                            <span style="color: red">Đã nộp, chưa KT</span>
+                                                            <span style="color: red">Đã nộp, chưa kiểm tra</span>
                                                         }
                                                         if (item.TrangThai_HoSo == "1")
                                                         {
-                                                            <span style="color: blue">Đã KT, Có sai sót</span>
+                                                            <span style="color: blue">Đã kiểm tra, Có sai sót</span>
                                                         }
                                                         if (item.TrangThai_HoSo == "2")
                                                         {
-                                                            <span style="color: red">Đã sửa, chưa KT</span>
+                                                            <span style="color: red">Đã sửa, chưa kiểm tra</span>
                                                         }
                                                         if (item.TrangThai_HoSo == "9")
                                                         {
-                                                            <span>Đã KT, HS đúng, đủ</span>
+                                                            <span>Đã kiểm tra, hồ sơ đúng, đủ</span>
                                                         }
                                                     }
                                                 </td>
