--- a/Views/DangKyXetTuyens/DkxthocbaEdit.cshtml
+++ b/Views/DangKyXetTuyens/DkxthocbaEdit.cshtml
@@ -286,7 +286,10 @@
             <div class="card-header mt-0 mb-0">
                 <span id="img_txt_card_hearder">Hình ảnh minh chứng</span>
                 <div>
-                    <button class="btn btn-outline-danger btn-sm" type="button" id="bt_delete_img_mc">Xóa</button>
+
+                    <button class="btn btn-outline-danger btn-sm" type="button" id="bt_delete_img_mc" onclick="bt_delete_img_mc_click()">Xóa</button>
+                    <script>function bt_delete_img_mc_click() { $('#modal_thongbao_delete').modal('show'); }</script>
+
                     <button class="btn btn-outline-primary btn-sm" type="button" id="bt_close_div_view_img">Đóng</button>
                 </div>
             </div>
@@ -295,7 +298,10 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active" id="div_item_view_minhchung">
                             <img class="d-block w-100 img-hide" id="img_view" display:none">
-                            <embed id="pdf_view" class="d-block w-100" style="height:700px; display:none" type="application/pdf" />
+                            <embed id="pdf_view" class="d-block w-100" style="display:none" type="application/pdf" />
+                            <input type="hidden" id="hiden_id_key" style="display:none" />
+                            <input type="hidden" id="hiden_loai_minhchung_xoa" style="display:none" />
+                            <input type="hidden" id="hiden_duongdan_file_xoa" style="display:none" />
                         </div>
                     </div>
                 </div>
@@ -332,6 +338,57 @@
 </div>
 <input type="hidden" value="@ViewBag.Dkxt_ID" id="hidden_Dkxt_HB_ID" />
 <input type="hidden" id="dkxt_hocba_id_checkin" name="dkxt_hocba_id_checkin" />
+<div class="modal fade" id="modal_thongbao_delete" tabindex="-1" role="dialog" aria-labelledby="modal_thongbao_delete" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="tieude_modal">Thông báo</h5>
+                <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close" onclick="bt_close_modal_xoa_click()"></button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label class="form-label">Bạn chắc chắn xóa ảnh minh chứng này ?</label>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-danger" type="button" onclick="bt_dongy_xoa_on_modal_delete_click()">Đồng ý</button>
+                <script>
+                    function bt_dongy_xoa_on_modal_delete_click() {
+                        var str_query = window.location.search;
+                        var data_post = {
+                            Dkxt_ID: $('#hiden_id_key').val(),
+                            Dkxt_LoaiMC: $('#hiden_loai_minhchung_xoa').val(),
+                            Dkxt_Url: $("#hiden_duongdan_file_xoa").val(),
+                        }
+                        console.log('tét delete', data_post)
+                       
+
+                        $.ajax({
+                            url: '/DangKyXetTuyens/DangKyXetTuyen_HB_DeleteMC',
+                            type: "POST",
+                            data: JSON.stringify(data_post),
+                            contentType: "application/json;charset=utf-8",
+                            success: function (res) {
+                                console.log(res);
+                              
+                                window.location.href = "/DangKyXetTuyens/DkxthocbaEdit" + str_query;
+                            },
+                            error: function (error) {
+                                console.error('Error update mc:', error);
+                            }
+                        });
+                    }
+                </script>
+                <button class="btn btn-primary" type="button" onclick="bt_close_modal_xoa_click()">Đóng</button>
+            </div>
+            <script>
+                function bt_close_modal_xoa_click() {
+                    $('#modal_thongbao_delete').modal('hide');
+                }
+            </script>
+        </div>
+    </div>
+</div>
 
 <script>
     $(document).ready(function () {
@@ -375,7 +432,7 @@
 
 
                     $('#dkxt_hocba_id_checkin').val(data.Dkxt_HB_ID);
-                
+
                     $('#sp_view_mc_hocba').empty();
 
                     if (data.Dkxt_HB_MinhChung_HB) {
@@ -422,7 +479,7 @@
                         $('#sp_view_mc_bang').append(str_a);
                     }
 
-                 
+
                     $('#sp_view_mc_cccd').empty();
 
                     if (data.Dkxt_HB_MinhChung_CCCD) {
@@ -866,6 +923,7 @@
             data: formData_All,
             async: false,
             success: function (res) {
+                console.log("Test upload", res);
 
                 _Dkxt_MinhChung_HB = res.MinhChung_HB;
                 _Dkxt_MinhChung_CCCD = res.MinhChung_CCCD;
@@ -874,7 +932,7 @@
                 check_in_file_hoba = true;
             },
             error: function (err) {
-                check_in_file_hoba = false;
+              
                 console(err.statusText);
             }
         });
@@ -898,8 +956,7 @@
             Dkxt_HB_MinhChung_UuTien: _Dkxt_MinhChung_UuTien,
         }
         console.log(formData_dknv_udate);
-
-
+       
         $("#loadingModal").modal("show");
 
         $.ajax({
@@ -911,7 +968,7 @@
             success: function (res) {
                 if (res.success) {
                     $("#loadingModal").modal("hide");
-                    window.location.href = '/DangKyXetTuyens/Dkxthocba'
+                    window.location.href = '/DangKyXetTuyens/Dkxthocba';
                 } else {
                     showToast("Thông báo", "Có lỗi xảy ra khi thêm mới nguyện vọng!", "bg-error");
                     $("#loadingModal").modal("hide");
@@ -934,19 +991,22 @@
     });
 </script>
 <script>
-    function showimg(url, loaimc, id_key) {
-
-        $("#hiden_duongdan_file_xoa").val(url);
+    function showimg(url, loaimc, id_key_hs) {
+        $('#hiden_id_key').val(id_key_hs);
         $('#hiden_loai_minhchung_xoa').val(loaimc);
+        $("#hiden_duongdan_file_xoa").val(url);
 
         var pdf_view = document.getElementById("pdf_view");
-        pdf_view.style.display = "none";
-        pdf_view.style.height = "0px";
 
-        $('#img_view').hide();
+        $('#pdf_view').height('0px');
+        $('#pdf_view').css('display', 'none');
+        $("#pdf_view").attr("src", "");
+        $("#pdf_view").hide();
+
         $("#img_view").attr("src", "");
+        $('#img_view').hide();
 
-        
+
         if (loaimc == 2) {
             $('#img_txt_card_hearder').text('Minh chứng học bạ');
         }
@@ -970,18 +1030,27 @@
         }
         if (lastChar.toLowerCase() === ".pdf") {
             $("#img_view").hide();
-            pdf_view.style.display = "inline";
-            pdf_view.style.height = "700px";
+            $('#pdf_view').height('500px');
+            $('#pdf_view').css('display', 'inline');
+           
             $("#pdf_view").attr("src", url);
             $("#pdf_view").show();
         }
         $('#div_view_img').show();
     }
+
     $(document).ready(function () {
         $('#bt_close_div_view_img').click(function () {
-            $('#div_view_img').hide();
-            $("#img_view").attr("src", "");
+
+
+            $('#pdf_view').height('0px');
+            $('#pdf_view').css('display', 'none');
             $("#pdf_view").attr("src", "");
+            $("#pdf_view").hide();
+
+            $("#img_view").attr("src", "");
+            $('#img_view').hide();
+
             $('#img_txt_card_hearder').text('Hình ảnh minh chứng');
         });
     });
