--- a/Views/DangKyXetTuyens/DkxtthptqgEdit.cshtml
+++ b/Views/DangKyXetTuyens/DkxtthptqgEdit.cshtml
@@ -281,7 +281,9 @@
             <div class="card-header mt-0 mb-0">
                 <span id="img_txt_card_hearder">Hình ảnh minh chứng</span>
                 <div>
-                    <button class="btn btn-outline-danger btn-sm" type="button" id="bt_delete_img_mc">Xóa</button>
+                    <button class="btn btn-outline-danger btn-sm" type="button" id="bt_delete_img_mc" onclick="bt_delete_img_mc_click()">Xóa</button>
+                    <script>function bt_delete_img_mc_click() { $('#modal_thongbao_delete').modal('show'); }</script>
+
                     <button class="btn btn-outline-primary btn-sm" type="button" id="bt_close_div_view_img">Đóng</button>
                 </div>
             </div>
@@ -290,7 +292,10 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active" id="div_item_view_minhchung">
                             <img class="d-block w-100 img-hide" id="img_view" display:none">
-                            <embed id="pdf_view" class="d-block w-100" style="height:700px; display:none" type="application/pdf" />
+                            <embed id="pdf_view" class="d-block w-100" style="height:0px; display:none" type="application/pdf" />
+                            <input type="hidden" id="hiden_id_key" style="display:none" />
+                            <input type="hidden" id="hiden_loai_minhchung_xoa" style="display:none" />
+                            <input type="hidden" id="hiden_duongdan_file_xoa" style="display:none" />
                         </div>
                     </div>
                 </div>
@@ -326,20 +331,77 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="modal_thongbao_delete" tabindex="-1" role="dialog" aria-labelledby="modal_thongbao_delete" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="tieude_modal">Thông báo</h5>
+                <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close" onclick="bt_close_modal_xoa_click()"></button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label class="form-label">Bạn chắc chắn xóa ảnh minh chứng này ?</label>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-danger" type="button" onclick="bt_dongy_xoa_on_modal_delete_click()">Đồng ý</button>
+                <script>
+                    function bt_dongy_xoa_on_modal_delete_click() {
+                        var str_query = window.location.search;
+                        var data_post = {
+                            Dkxt_ID: $('#hiden_id_key').val(),
+                            Dkxt_LoaiMC: $('#hiden_loai_minhchung_xoa').val(),
+                            Dkxt_Url: $("#hiden_duongdan_file_xoa").val(),
+                        }
+                        //console.log('tét delete', data_post)
+                        //return;
+
+                        $.ajax({
+                            url: '/DangKyXetTuyens/DangKyXetTuyen_KQTTHPTQG_DeleteMC',
+                            type: "POST",
+                            data: JSON.stringify(data_post),
+                            contentType: "application/json;charset=utf-8",
+                            success: function (res) {
+                                window.location.href = "/DangKyXetTuyens/DkxtthptqgEdit" + str_query;
+                            },
+                            error: function (error) {
+                                console.error('Error update mc:', error);
+                            }
+                        });
+                    }
+                </script>
+                <button class="btn btn-primary" type="button" onclick="bt_close_modal_xoa_click()">Đóng</button>
+            </div>
+            <script>
+                function bt_close_modal_xoa_click() {
+                    $('#modal_thongbao_delete').modal('hide');
+                }
+            </script>
+        </div>
+    </div>
+</div>
+
 <input type="hidden" value="@ViewBag.Dkxt_ID" id="hidden_Dkxt_KQTQG_ID" />
 <input type="hidden" id="dkxt_thptqg_id_checkin" name="dkxt_thptqg_id_checkin" />
 <script>
-    function showimg(url, loaimc, id_key) {
-
-        $("#hiden_duongdan_file_xoa").val(url);
+    function showimg(url, loaimc, id_key_hs) {
+        $('#hiden_id_key').val(id_key_hs);
         $('#hiden_loai_minhchung_xoa').val(loaimc);
+        $("#hiden_duongdan_file_xoa").val(url);
 
+       
         var pdf_view = document.getElementById("pdf_view");
-        pdf_view.style.display = "none";
-        pdf_view.style.height = "0px";
 
-        $('#img_view').hide();
+        $('#pdf_view').height('0px');
+        $('#pdf_view').css('display', 'none');    
+        $("#pdf_view").attr("src", "");
+        $("#pdf_view").hide();
+
         $("#img_view").attr("src", "");
+        $('#img_view').hide();
+
+
+       
 
         if (loaimc == 1) {
             $('#img_txt_card_hearder').text('Minh chứng chứng nhận tốt nghiệp');
@@ -359,16 +421,19 @@
         var lastChar = url.substr(url.length - 4); // => kiểm tra file pdf hoặc img
 
         if (lastChar.toLowerCase() != ".pdf") {
-            pdf_view.style.display = "none";
-            pdf_view.style.height = "0px";
+            $('#pdf_view').height('0px');
+            $('#pdf_view').css('display', 'none');
+            $("#pdf_view").attr("src", "");
+            $("#pdf_view").hide();
 
             $("#img_view").attr("src", url);
             $("#img_view").show();
         }
         if (lastChar.toLowerCase() === ".pdf") {
             $("#img_view").hide();
-            pdf_view.style.display = "inline";
-            pdf_view.style.height = "700px";
+            $('#pdf_view').height('500px');
+            $('#pdf_view').css('display', 'inline');
+         
             $("#pdf_view").attr("src", url);
             $("#pdf_view").show();
         }
@@ -862,7 +927,7 @@
             }
             /*hết phần khai báo đối tượng*/
             console.log(data_Obj_edit);
-           
+
 
             $("#loadingModal").modal("show");
             $.ajax({
