--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtHocBa.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtHocBa.cshtml
@@ -106,7 +106,8 @@
                         <table class="table table-hover table-striped">
                             <thead>
                                 <tr>
-                                    <th>Họ tên</th>
+                                    <th>Họ lót</th>
+                                    <th>Tên</th>
                                     <th>Điện thoại</th>
                                     <th>N.Vọng</th>
                                     <th>Ngành</th>
@@ -131,7 +132,10 @@
                                         {
                                             <tr>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_HoLot) @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_Ten)
+                                                    @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_HoLot)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_Ten)
                                                 </td>
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_DienThoai)
